--- a/Ch_Stl/Ch_Stl/Ch_Stl.vcxproj
+++ b/Ch_Stl/Ch_Stl/Ch_Stl.vcxproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ch\utility.h" />
+    <ClInclude Include="..\ch\_iterbase.h" />
     <ClInclude Include="..\ch\_random.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
